crates/ruff_python_parser/tests/snapshots/invalid_syntax@ann_assign_stmt_tuple_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/ann_assign_stmt_tuple_target.py
---
## AST

```
Module(
    ModModule {
        range: 0..48,
        body: [
            AnnAssign(
                StmtAnnAssign {
                    range: 0..11,
                    target: Tuple(
                        ExprTuple {
                            range: 0..2,
                            elts: [
                                Name(
                                    ExprName {
                                        range: 0..1,
                                        id: "x",
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                            parenthesized: false,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 4..7,
                            id: "int",
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            ExprNumberLiteral {
                                range: 10..11,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 12..28,
                    target: Tuple(
                        ExprTuple {
                            range: 12..16,
                            elts: [
                                Name(
                                    ExprName {
                                        range: 12..13,
                                        id: "x",
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 15..16,
                                        id: "y",
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                            parenthesized: false,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 18..21,
                            id: "int",
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        Tuple(
                            ExprTuple {
                                range: 24..28,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 24..25,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 27..28,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                StmtAnnAssign {
                    range: 29..47,
                    target: Tuple(
                        ExprTuple {
                            range: 29..35,
                            elts: [
                                Name(
                                    ExprName {
                                        range: 30..31,
                                        id: "x",
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 33..34,
                                        id: "y",
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                            parenthesized: true,
                        },
                    ),
                    annotation: Name(
                        ExprName {
                            range: 37..40,
                            id: "int",
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        Tuple(
                            ExprTuple {
                                range: 43..47,
                                elts: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 43..44,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 46..47,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x,: int = 1
  | ^^ Syntax Error: only single target (not tuple) can be annotated
2 | x, y: int = 1, 2
3 | (x, y): int = 1, 2
  |


  |
1 | x,: int = 1
2 | x, y: int = 1, 2
  | ^^^^ Syntax Error: only single target (not tuple) can be annotated
3 | (x, y): int = 1, 2
  |


  |
1 | x,: int = 1
2 | x, y: int = 1, 2
3 | (x, y): int = 1, 2
  | ^^^^^^ Syntax Error: only single target (not tuple) can be annotated
  |
